--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-
-@import url('https://fonts.googleapis.com');
-@import url('https://fonts.gstatic.com');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-
-
-
-@import url("https://code.jquery.com/jquery-3.7.1.min.js");
-@import url("https://cdn.jsdelivr.net/npm/sweetalert2@11");
-@import url("https://cdn.ckeditor.com/ckeditor5/23.0.0/classic/ckeditor.js");
-@import url("https://cdn.jsdelivr.net/npm/apexcharts");
-
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
