--- a/src/app/region/region.component.html
+++ b/src/app/region/region.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top: 50px;">
     <div class="card">
         <div class="card-body">
-            <form #region="ngForm" (ngSubmit)="onSubmit(region.value)">
+            <form #region="ngForm" (ngSubmit)="onUpdate(region.value)">
                 <div class="form-group row">
                     <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Name</label>
                     <div class="col-sm-10">
