--- a/src/app/region/region.component.html
+++ b/src/app/region/region.component.html
@@ -1,24 +1,45 @@
-<div class="container" style="margin-top: 50px;">
+<div class="container" style="margin-top: 90px;">
     <div class="card">
         <div class="card-body">
-            <form #region="ngForm" (ngSubmit)="onUpdate(region.value)">
-                <div class="form-group row">
-                    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" name="name" ngModel class="form-control form-control" 
-                            placeholder="col-form-label-sm">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <a [href]="" class="btn btn-info">Navigate</a>
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">name</th>
+                                    <th scope="col">initial</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let region of regions">
+                                    <th scope="row">{{region.id}}</th>
+                                    <td>{{region.name}}</td>
+                                    <td>{{region.initial}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+
                     </div>
-                </div><br><br>
-                <div class="form-group row">
-                    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Initial</label>
-                    <div class="col-sm-10">
-                        <input type="text" name="initial" ngModel class="form-control form-control" 
-                            placeholder="col-form-label-sm">
+                    
+                    <div class="col">
+
+                        <form #region="ngForm" (ngSubmit)="onSubmit(region.value)">
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Example label</label>
+                                <input type="text" class="form-control" name="name" ngModel placeholder="Name"><br>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Another label</label>
+                                <input type="text" class="form-control" name="initial" ngModel placeholder="Initial">
+                            </div><br>
+                            <button class="btn btn-primary" type="submit">Submit</button>
+                        </form>
                     </div>
                 </div>
-                
-                <button class="btn btn-primary" type="submit">Submit</button>
-            </form>
+            </div>
         </div>
     </div>
 </div>
