--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-region></app-region>
+
+<div *ngIf="isGuest">
+    <app-login></app-login>
+</div>
+
+<div *ngIf="isAuth">
+    <app-dashboard></app-dashboard>
+</div>
